// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Layout : Header renders correctly 1`] = `
<header
  className="site-header siteHeader  "
>
  <div
    className="container container"
  >
    <div
      className=""
      style={
        Object {
          "height": 0,
          "opacity": 0,
          "overflow": "hidden",
          "transition": "height 500ms ease-in-out,opacity 500ms ease-in-out,background 500ms ease-in-out",
        }
      }
    >
      <div
        className="mobileMenu"
        style={
          Object {
            "minHeight": "0px",
          }
        }
      >
        <div
          className="searchInput"
        >
          <div
            data-reach-combobox=""
          >
            <label
              className=""
              htmlFor="header-search-autocomplete-mobile"
            >
              Search
            </label>
            <input
              aria-autocomplete="both"
              aria-controls="listbox--1"
              aria-expanded={false}
              aria-haspopup="listbox"
              autoComplete="off"
              data-reach-combobox-input=""
              id="header-search-autocomplete-mobile"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onSelect={[Function]}
              role="combobox"
              value=""
            />
          </div>
          <button
            aria-label="Submit search"
            className="searchSubmit"
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              aria-hidden="true"
              src="test-file-stub"
            />
          </button>
        </div>
        <nav
          className="js-disabled-block"
        >
          <ul>
            <li>
              <a
                href="/test-a"
              >
                Test A
              </a>
            </li>
            <li>
              <a
                href="/test-b"
              >
                Test B
              </a>
            </li>
          </ul>
        </nav>
        <a
          className="getInvolved"
          href="/about-project/help"
        >
          Get Involved
        </a>
        <div
          className="mobilePointer"
        />
      </div>
    </div>
    <div
      className=""
      style={
        Object {
          "background": "colorPlum800",
          "height": "auto",
          "opacity": 1,
          "overflow": "unset",
          "transition": "height 500ms ease-in-out,opacity 500ms ease-in-out,background 500ms ease-in-out",
        }
      }
    >
      <div
        className="banner"
      >
        <span
          className="new"
        >
          New
        </span>
         
        <a
          href="/race"
        >
          We just launched the COVID Racial Data Tracker
        </a>
      </div>
    </div>
    <div
      className="container false container"
    >
      <div
        className="layout--content-full"
      >
        <div
          className="layout--content-primary"
        >
          <div
            className="siteTitleContainer"
          >
            <div
              className="siteTitleInner"
            >
              <a
                href="/"
              >
                <img
                  alt="The COVID Tracking Project"
                  src="test-file-stub"
                  width="176px"
                />
              </a>
            </div>
            <div
              className="siteNavContainer"
            >
              <div
                className="navContainer"
              >
                <button
                  aria-expanded={false}
                  className="mobileToggle"
                  onClick={[Function]}
                  type="button"
                >
                  Menu
                </button>
              </div>
              <div
                className="tools"
              >
                <div
                  className="searchInput"
                >
                  <div
                    data-reach-combobox=""
                  >
                    <label
                      className=""
                      htmlFor="header-search-autocomplete"
                    >
                      Search
                    </label>
                    <input
                      aria-autocomplete="both"
                      aria-controls="listbox--2"
                      aria-expanded={false}
                      aria-haspopup="listbox"
                      autoComplete="off"
                      data-reach-combobox-input=""
                      id="header-search-autocomplete"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onSelect={[Function]}
                      role="combobox"
                      value=""
                    />
                  </div>
                  <button
                    aria-label="Submit search"
                    className="searchSubmit"
                    onClick={[Function]}
                    type="button"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      src="test-file-stub"
                    />
                  </button>
                </div>
                <a
                  className="getInvolved"
                  href="/about-project/help"
                >
                  Get involved
                </a>
              </div>
              <nav
                className="js-disabled-block"
              >
                <ul>
                  <li>
                    <a
                      href="/test-a"
                    >
                      Test A
                    </a>
                  </li>
                  <li>
                    <a
                      href="/test-b"
                    >
                      Test B
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
          <div
            className="atlanticBanner"
          >
            <span>
              From
            </span>
             
            <img
              alt="The Atlantic"
              src="test-file-stub"
            />
            <div />
          </div>
          <div
            className="titleSubnavContainer"
          >
            <div
              className="title"
            >
              <h1
                className="page-title pageTitle extraSpace"
              >
                Sample title
              </h1>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`Components : Layout : Header renders correctly 2`] = `
<header
  className="site-header siteHeader  noMargin"
>
  <div
    className="container container"
  >
    <div
      className=""
      style={
        Object {
          "height": 0,
          "opacity": 0,
          "overflow": "hidden",
          "transition": "height 500ms ease-in-out,opacity 500ms ease-in-out,background 500ms ease-in-out",
        }
      }
    >
      <div
        className="mobileMenu"
        style={
          Object {
            "minHeight": "0px",
          }
        }
      >
        <div
          className="searchInput"
        >
          <div
            data-reach-combobox=""
          >
            <label
              className=""
              htmlFor="header-search-autocomplete-mobile"
            >
              Search
            </label>
            <input
              aria-autocomplete="both"
              aria-controls="listbox--5"
              aria-expanded={false}
              aria-haspopup="listbox"
              autoComplete="off"
              data-reach-combobox-input=""
              id="header-search-autocomplete-mobile"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onSelect={[Function]}
              role="combobox"
              value=""
            />
          </div>
          <button
            aria-label="Submit search"
            className="searchSubmit"
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              aria-hidden="true"
              src="test-file-stub"
            />
          </button>
        </div>
        <nav
          className="js-disabled-block"
        >
          <ul>
            <li>
              <a
                href="/test-a"
              >
                Test A
              </a>
            </li>
            <li>
              <a
                href="/test-b"
              >
                Test B
              </a>
            </li>
          </ul>
        </nav>
        <a
          className="getInvolved"
          href="/about-project/help"
        >
          Get Involved
        </a>
        <div
          className="mobilePointer"
        />
      </div>
    </div>
    <div
      className=""
      style={
        Object {
          "background": "colorPlum800",
          "height": "auto",
          "opacity": 1,
          "overflow": "unset",
          "transition": "height 500ms ease-in-out,opacity 500ms ease-in-out,background 500ms ease-in-out",
        }
      }
    >
      <div
        className="banner"
      >
        <span
          className="new"
        >
          New
        </span>
         
        <a
          href="/race"
        >
          We just launched the COVID Racial Data Tracker
        </a>
      </div>
    </div>
    <div
      className="container false container"
    >
      <div
        className="layout--content-full"
      >
        <div
          className="layout--content-primary"
        >
          <div
            className="siteTitleContainer"
          >
            <div
              className="siteTitleInner"
            >
              <a
                href="/"
              >
                <img
                  alt="The COVID Tracking Project"
                  src="test-file-stub"
                  width="176px"
                />
              </a>
            </div>
            <div
              className="siteNavContainer"
            >
              <div
                className="navContainer"
              >
                <button
                  aria-expanded={false}
                  className="mobileToggle"
                  onClick={[Function]}
                  type="button"
                >
                  Menu
                </button>
              </div>
              <div
                className="tools"
              >
                <div
                  className="searchInput"
                >
                  <div
                    data-reach-combobox=""
                  >
                    <label
                      className=""
                      htmlFor="header-search-autocomplete"
                    >
                      Search
                    </label>
                    <input
                      aria-autocomplete="both"
                      aria-controls="listbox--6"
                      aria-expanded={false}
                      aria-haspopup="listbox"
                      autoComplete="off"
                      data-reach-combobox-input=""
                      id="header-search-autocomplete"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onSelect={[Function]}
                      role="combobox"
                      value=""
                    />
                  </div>
                  <button
                    aria-label="Submit search"
                    className="searchSubmit"
                    onClick={[Function]}
                    type="button"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      src="test-file-stub"
                    />
                  </button>
                </div>
                <a
                  className="getInvolved"
                  href="/about-project/help"
                >
                  Get involved
                </a>
              </div>
              <nav
                className="js-disabled-block"
              >
                <ul>
                  <li>
                    <a
                      href="/test-a"
                    >
                      Test A
                    </a>
                  </li>
                  <li>
                    <a
                      href="/test-b"
                    >
                      Test B
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
          <div
            className="atlanticBanner"
          >
            <span>
              From
            </span>
             
            <img
              alt="The Atlantic"
              src="test-file-stub"
            />
            <div />
          </div>
          <div
            className="titleSubnavContainer"
          >
            <div
              className="title"
            >
              <h1
                className="page-title pageTitle extraSpace"
              >
                Sample title
              </h1>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`Components : Layout : Header renders correctly 3`] = `
<header
  className="site-header siteHeader  "
>
  <div
    className="container container"
  >
    <div
      className=""
      style={
        Object {
          "height": 0,
          "opacity": 0,
          "overflow": "hidden",
          "transition": "height 500ms ease-in-out,opacity 500ms ease-in-out,background 500ms ease-in-out",
        }
      }
    >
      <div
        className="mobileMenu"
        style={
          Object {
            "minHeight": "0px",
          }
        }
      >
        <div
          className="searchInput"
        >
          <div
            data-reach-combobox=""
          >
            <label
              className=""
              htmlFor="header-search-autocomplete-mobile"
            >
              Search
            </label>
            <input
              aria-autocomplete="both"
              aria-controls="listbox--7"
              aria-expanded={false}
              aria-haspopup="listbox"
              autoComplete="off"
              data-reach-combobox-input=""
              id="header-search-autocomplete-mobile"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onSelect={[Function]}
              role="combobox"
              value=""
            />
          </div>
          <button
            aria-label="Submit search"
            className="searchSubmit"
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              aria-hidden="true"
              src="test-file-stub"
            />
          </button>
        </div>
        <nav
          className="js-disabled-block"
        >
          <ul>
            <li>
              <a
                href="/test-a"
              >
                Test A
              </a>
            </li>
            <li>
              <a
                href="/test-b"
              >
                Test B
              </a>
            </li>
          </ul>
        </nav>
        <a
          className="getInvolved"
          href="/about-project/help"
        >
          Get Involved
        </a>
        <div
          className="mobilePointer"
        />
      </div>
    </div>
    <div
      className=""
      style={
        Object {
          "background": "colorPlum800",
          "height": "auto",
          "opacity": 1,
          "overflow": "unset",
          "transition": "height 500ms ease-in-out,opacity 500ms ease-in-out,background 500ms ease-in-out",
        }
      }
    >
      <div
        className="banner"
      >
        <span
          className="new"
        >
          New
        </span>
         
        <a
          href="/race"
        >
          We just launched the COVID Racial Data Tracker
        </a>
      </div>
    </div>
    <div
      className="container false container"
    >
      <div
        className="layout--content-full"
      >
        <div
          className="layout--content-primary"
        >
          <div
            className="siteTitleContainer"
          >
            <div
              className="siteTitleInner"
            >
              <a
                href="/"
              >
                <img
                  alt="The COVID Tracking Project"
                  src="test-file-stub"
                  width="176px"
                />
              </a>
            </div>
            <div
              className="siteNavContainer"
            >
              <div
                className="navContainer"
              >
                <button
                  aria-expanded={false}
                  className="mobileToggle"
                  onClick={[Function]}
                  type="button"
                >
                  Menu
                </button>
              </div>
              <div
                className="tools"
              >
                <div
                  className="searchInput"
                >
                  <div
                    data-reach-combobox=""
                  >
                    <label
                      className=""
                      htmlFor="header-search-autocomplete"
                    >
                      Search
                    </label>
                    <input
                      aria-autocomplete="both"
                      aria-controls="listbox--8"
                      aria-expanded={false}
                      aria-haspopup="listbox"
                      autoComplete="off"
                      data-reach-combobox-input=""
                      id="header-search-autocomplete"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onSelect={[Function]}
                      role="combobox"
                      value=""
                    />
                  </div>
                  <button
                    aria-label="Submit search"
                    className="searchSubmit"
                    onClick={[Function]}
                    type="button"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      src="test-file-stub"
                    />
                  </button>
                </div>
                <a
                  className="getInvolved"
                  href="/about-project/help"
                >
                  Get involved
                </a>
              </div>
              <nav
                className="js-disabled-block"
              >
                <ul>
                  <li>
                    <a
                      href="/test-a"
                    >
                      Test A
                    </a>
                  </li>
                  <li>
                    <a
                      href="/test-b"
                    >
                      Test B
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
          <div
            className="atlanticBanner"
          >
            <span>
              From
            </span>
             
            <img
              alt="The Atlantic"
              src="test-file-stub"
            />
            <div />
          </div>
          <div
            className="titleSubnavContainer"
          >
            <div
              className="title"
            >
              <h1
                className="page-title pageTitle extraSpace"
              >
                <a
                  href="/link"
                >
                  Sample title
                </a>
              </h1>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;
